--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "LLM-driven trading system built on Hyperliquid"
 authors = ["RAZVAN MIHAILESCU <RAZVAN.MIHAILESCU1996@GMAIL.COM>"]
 readme = "README.md"
-package-mode = false
+package-mode = true
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
